added picutes folder and set code of it

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <div id="logo">
-                <img src="BooleanBits.png" />
+                <img src="images/BooleanBits.png" />
             </div>
             <div id="link">
                 <a href="pageTest.html">HOME</a>
