--- a/pageTest.html
+++ b/pageTest.html
@@ -15,7 +15,7 @@
     <header>
       <nav>
         <div id="logo">
-          <img src="BooleanBits.png" />
+          <img src="images/BooleanBits.png" />
         </div>
         <div id="link">
           <a href="pageTest.html">HOME</a>
@@ -43,7 +43,7 @@
           </td>
         </tr>
         <tr id="after">
-          <td><img id="imag" src="codes.jpg" /></td>
+          <td><img id="imag" src="images/codes.jpg" /></td>
           <td id="text">
             <h2 id="contentHeading">Our Service</h2>
             <p>
@@ -72,7 +72,7 @@
             </p>
             <a href="about.html"><input id="contentButton" type="button" value="FIND OUT HOW"/></a>
           </td>
-          <td><img id="imag" src="laptop.jpg" /></td>
+          <td><img id="imag" src="images/laptop.jpg" /></td>
         </tr>
       </table>
     </section>
