added css folder and changed code accordingly

--- a/pageTest.html
+++ b/pageTest.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <head>
-    <link rel="stylesheet" href="test.css" />
+    <link rel="stylesheet" href="css/test.css" />
     <title>Boolean's Project</title>
   <meta charset="utf-8" content="text/html" http-equiv="Content-Type">
   <meta name="viewport" content="width=device-width, initial-scale=1">
